# CPSL_ROS2_Sensors

./: .gitignore  .gitmodules  README.md  os-122517001998-metadata.json  pyproject.toml  tracker_log.txt
src/CPSL_ROS2_Sensors_bringup/: package.xml  setup.cfg  setup.py
src/CPSL_ROS2_Sensors_bringup/launch/: ugv_sensor_bringup.launch.py
src/cpsl_ros2_sensors_bringup/: package.xml  setup.py
src/cpsl_ros2_sensors_bringup/launch/: human_movement_sensor_bringup.launch.py  ouster_lidar_bringup.launch.py  sensor_bringup_single_radar.launch.py  uav_sensor_bringup.launch.py  uav_sensor_bringup_IcaRAus.launch.py  uav_sensor_bringup_radsar.launch.py  uav_sensor_bringup_ragnnarok.launch.py  ugv_sensor_bringup.launch.py  ugv_sensor_bringup_ragnnarok.launch.py
src/cpsl_ros2_sensors_bringup/ouster_configs/: driver_params.yaml
src/cpsl_ros2_sensors_bringup/rviz_cfgs/: human_view.rviz  uav_view.rviz  ugv_view.rviz
src/dataset_generator/: package.xml  setup.py
src/dataset_generator/configs/: human_movement.yaml  uav_dataset.yaml  uav_dataset_icaraus_dataset.yaml  uav_dataset_icaraus_dataset_flow.yaml  uav_dataset_icaraus_dataset_radar.yaml  uav_dataset_radar_vs_flow.yaml  uav_dataset_radvel.yaml  ugv_dataset.yaml
src/dataset_generator/dataset_generator/: camera_intrinsics.py  dataset_generator.py  depth_node.py
src/dataset_generator/launch/: record_dataset.launch.py
src/platform_descriptions/: package.xml  setup.cfg  setup.py
src/platform_descriptions/launch/: publish_platform_description.launch.py
src/platform_descriptions/urdf/: cpsl_human_movement.urdf.xml  (+7 more)
